[gd_scene load_steps=3 format=3 uid="uid://ctxtdt87cbgjr"]

[ext_resource type="Script" uid="uid://cn8p7lmrh187e" path="res://scenes/BattleCompleteDialog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cpndw8q8cse38" path="res://assets/Images/backgrounds/WaveBackground.png" id="2_al0er"]

[node name="BattleCompleteDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DimBackground" type="ColorRect" parent="."]
modulate = Color(0.891182, 0.623468, 0.621927, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.854902)

[node name="Sprite2D" type="Sprite2D" parent="DimBackground"]
show_behind_parent = true
position = Vector2(544, 272)
texture = ExtResource("2_al0er")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 152.0
offset_right = 844.0
offset_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Victory!"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "+0 XP"
horizontal_alignment = 1

[node name="MomentumLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "No Momentum"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Current Status:"

[node name="WarningLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PressOnButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Continue without rest. Gain momentum for damage bonus, but keep status effects and cooldowns."
text = "Press On (Gain Momentum)"

[node name="TakeBreatherButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
tooltip_text = "Rest and recover. Reset momentum, collect rewards, restore HP/MP/SP."
text = "Take a Breather (Collect Rewards)"
